--- a/index.html
+++ b/index.html
@@ -100,8 +100,14 @@
                       <p><span class="title-s">Name: </span> <span>Vonethasin Vilayphone</span></p>
                       <p><span class="title-s">Profile: </span> <span>Student</span></p>
                       <p><span class="title-s">Email: </span> <span>vonenasintola90@gmail.com</span></p>
-                      <p><span class="title-s">Phone: </span> <span>+856 20997786888</span></p>
+                      <p><span class="title-s">Phone: </span> <span>+85620997786888</span></p>
                     </div>
+                  </div>
+                  <div class="titlemyskill">
+                    <hr class="hr1">
+                    <H1 class="myskill">MySkill</H1>
+                    <p class="tittleskill">Knowledge gained from university and additional learning by yourself</p>
+                    <hr>
                   </div>
                 </div>
                 <div class="skill-bar-container">
@@ -136,7 +142,12 @@
                     </div>
                   </div>
                   <div class="skill-bar">
-                    <div class="skill-bar-fill" data-percentage="64%">
+                    <div class="skill-bar-fill" data-percentage="60%">
+                      <span class="skill-bar-text">Premiere Pro</span>
+                    </div>
+                  </div>
+                  <div class="skill-bar">
+                    <div class="skill-bar-fill" data-percentage="75%">
                       <span class="skill-bar-text">WORD & Excel & Powerpoint</span>
                     </div>
                   </div>
