--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                       <p><span class="title-s">Name: </span> <span>Vonethasin Vilayphone</span></p>
                       <p><span class="title-s">Profile: </span> <span>Student</span></p>
                       <p><span class="title-s">Email: </span> <span>vonenasintola90@gmail.com</span></p>
-                      <p><span class="title-s">Phone: </span> <span>+8562099778688</span></p>
+                      <p><span class="title-s">Phone: </span> <span>+85620997786888</span></p>
                     </div>
                   </div>
                   <div class="titlemyskill">
@@ -238,7 +238,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <!-- <span class="ion-ios-plus-outline"></span> -->
+                      <span class="ion-ios-plus-outline"></span>
                     </div>
                   </div>
                 </div>
@@ -262,7 +262,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <!-- <span class="ion-ios-plus-outline"></span> -->
+                      <span class="ion-ios-plus-outline"></span>
                     </div>
                   </div>
                 </div>
@@ -281,12 +281,12 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">ຖ່າຍຮູບງານເກົາຫຼີ</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">ເຕັກນິກວິຊາຊີບຫຼວງພະບາງ</span> / <span class="w-date">15 Dec. 2023</span>
+                      <span class="w-ctegory">ເຕັກນິກວິຊາຊີບ</span> / <span class="w-date">15 Dec. 2023</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <!-- <span class="ion-ios-plus-outline"></span> -->
+                      <span class="ion-ios-plus-outline"></span>
                     </div>
                   </div>
                 </div>
@@ -294,7 +294,7 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
           <div class="work-box">
             <a href="img/1.jpeg" data-lightbox="gallery-mf">
               <div class="work-img">
@@ -310,7 +310,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <!-- <span class="ion-ios-plus-outline"></span> -->
+                      <span class="ion-ios-plus-outline"></span>
                     </div>
                   </div>
                 </div>
@@ -334,7 +334,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <!-- <span class="ion-ios-plus-outline"></span> -->
+                      <span class="ion-ios-plus-outline"></span>
                     </div>
                   </div>
                 </div>
@@ -358,14 +358,14 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <!-- <span class="ion-ios-plus-outline"></span> -->
+                      <span class="ion-ios-plus-outline"></span>
                     </div>
                   </div>
                 </div>
               </div>
             </a>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </div>
@@ -401,7 +401,7 @@
                     </p>
                     <ul class="list-ico">
                       <li><span class="ion-ios-location"></span> 19°52'12.3"N 102°06'49.7"E</li>
-                      <li><span class="ion-ios-telephone"></span> +856 2099778688</li>
+                      <li><span class="ion-ios-telephone"></span> +856 20997786888</li>
                       <li><span class="ion-email"></span> vonenasintola90@gmail.com</li>
                     </ul>
                   </div>
