--- a/index.html
+++ b/index.html
@@ -152,34 +152,7 @@
                     </div>
                   </div>
                 </div>
-                <!-- <div class="skill-mf">
-                  <p class="title-s">Skill</p>
-                  <span>HTML</span> <span class="pull-right">60%</span>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <span>CSS3</span> <span class="pull-right">60%</span>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0"
-                      aria-valuemax="100"></div>
-                  </div>
-                  <span>JAVASCRIPT & JAVA & MySQL</span> <span class="pull-right">25%</span>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
-                      aria-valuemax="100"></div>
-                  </div>
-                  <span>PS & Ai</span> <span class="pull-right">64%</span>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 64%" aria-valuenow="64" aria-valuemin="0"
-                      aria-valuemax="100"></div>
-                  </div>
-                  <span>WORD & Excel & Powerpoint</span> <span class="pull-right">78%</span>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 78%" aria-valuenow="78" aria-valuemin="0"
-                      aria-valuemax="100"></div>
-                  </div>
-                </div> -->
+                
               </div>
               <div class="col-md-6">
                 <div class="about-me pt-4 pt-md-0">
@@ -194,6 +167,29 @@
                     whilst also being capable of using own initiative. I am skilled In dealing with problems in a
                     resourceful manner and negotiating to achieve beneficial agreement. I am always enthusiastic to
                     learn and undertake new challenges.
+                  </p>
+                </div>
+                <div class="about-me pt-4 pt-md-0">
+                  <div class="title-box-2">
+                    <h5 class="title-left">
+                      Experiences
+                    </h5>
+                  </div>
+                  <p class="lead">
+                    <ul class="school">
+                      <li></li>
+                    </ul>
+                  </p>
+                </div>
+                <div class="about-me pt-4 pt-md-0">
+                  <div class="title-box-2">
+                    <h5 class="title-left">
+                      Education
+                    </h5>
+                  </div>
+                  <h1 class="text-edu"> ວິທະຍາໄລ ເຕັກນິກ-ວິຊາຊີບຫຼວງພະບາງ </h1>
+                  <p class="lead">
+                    <li class="lead-edu">2022 - 2024 | ສາຂາເຕັກໂນໂລຊີຂໍ້ມູນຂ່າວສານ (ຊັ້ນສູງ)</li>
                   </p>
                 </div>
               </div>
@@ -294,6 +290,78 @@
             </a>
           </div>
         </div>
+        <!-- <div class="col-md-4">
+          <div class="work-box">
+            <a href="img/1.jpeg" data-lightbox="gallery-mf">
+              <div class="work-img">
+                <img src="img/1.jpeg" alt="" class="img-fluid">
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Bindo Laro Cado</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <span class="ion-ios-plus-outline"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="work-box">
+            <a href="img/1.jpeg" data-lightbox="gallery-mf">
+              <div class="work-img">
+                <img src="img/1.jpeg" alt="" class="img-fluid">
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Studio Lena Mado</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <span class="ion-ios-plus-outline"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="work-box">
+            <a href="img/1.jpeg" data-lightbox="gallery-mf">
+              <div class="work-img">
+                <img src="img/1.jpeg" alt="" class="img-fluid">
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Studio Big Bang</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2017</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <span class="ion-ios-plus-outline"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div> -->
 
       </div>
     </div>
