--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
                   <p class="lead">
                     <li class="lead-edu">2022 - 2024 | ສາຂາເຕັກໂນໂລຊີຂໍ້ມູນຂ່າວສານ (ຊັ້ນສູງ)</li>
                   </p>
-                  <h1 class="text-edu"> ມະຫາວິທະຍາໄລ ສຸພານຸວົງ </h1>
+<!--                   <h1 class="text-edu"> ມະຫາວິທະຍາໄລ ສຸພານຸວົງ </h1>
                   <p class="lead">
                     <li class="lead-edu">2024 - 2025 | ວິສະຫະກຳຄອມພິວເຕີ (ປະລິນຍາຕີ)</li>
-                  </p>
+                  </p> -->
                 </div>
               </div>
             </div>
