--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                     <div class="about-info">
                       <p><span class="title-s">Name: </span> <span>Vonethasin Vilayphone</span></p>
                       <p><span class="title-s">Profile: </span> <span>Student</span></p>
-                      <p><span class="title-s">Email: </span> <span>vonenasintola90@gmail.com</span></p>
-                      <p><span class="title-s">Phone: </span> <span>+85620997786888</span></p>
+                      <p><span class="title-s">Email: </span> <span>vonethasin@gmail.com</span></p>
+                      <p><span class="title-s">Phone: </span> <span>+8562099778688</span></p>
                     </div>
                   </div>
                   <div class="titlemyskill">
@@ -401,8 +401,8 @@
                     </p>
                     <ul class="list-ico">
                       <li><span class="ion-ios-location"></span> 19°52'12.3"N 102°06'49.7"E</li>
-                      <li><span class="ion-ios-telephone"></span> +856 20997786888</li>
-                      <li><span class="ion-email"></span> vonenasintola90@gmail.com</li>
+                      <li><span class="ion-ios-telephone"></span> +856 2099778688</li>
+                      <li><span class="ion-email"></span> vonethasin@gmail.com</li>
                     </ul>
                   </div>
                   <div class="socials">
