--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     </div>
                   </div>
                 </div>
-                
+
               </div>
               <div class="col-md-6">
                 <div class="about-me pt-4 pt-md-0">
@@ -176,9 +176,13 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    <ul class="school">
-                      <li></li>
-                    </ul>
+                  <ul class="school">
+                    <li>ລົງຝືກງານທີ່ ວິທະຍາໄລ ເຕັກນິກ-ວິຊາຊີບຫຼວງພະບາງ 23/09/2024 - 26/12/2024</li>
+                    <li>ລົງຝຶກອົບຮົມການບຳລຸງຮັກສາ ແລະ ແກ້ໄຂບັນຫາຊອບແວຄອມພິວເຕີ ຄັ້ງວັນທີ 14 - 18 ກໍລະກົດ 2025 ທີ່
+                      ເມືອງເງິນ ແຂວງໄຊຍະບູລີ
+                      ສະໜັບສະໜູນໂດຍ ອົງການມູນນິທີເກື້ອຝັນເດັກ
+                      14/07/2025 - 18/07/2025</li>
+                  </ul>
                   </p>
                 </div>
                 <div class="about-me pt-4 pt-md-0">
@@ -191,7 +195,7 @@
                   <p class="lead">
                     <li class="lead-edu">2022 - 2025 | ສາຂາເຕັກໂນໂລຊີຂໍ້ມູນຂ່າວສານ (ຊັ້ນສູງ)</li>
                   </p>
-<!--                   <h1 class="text-edu"> ມະຫາວິທະຍາໄລ ສຸພານຸວົງ </h1>
+                  <!--                   <h1 class="text-edu"> ມະຫາວິທະຍາໄລ ສຸພານຸວົງ </h1>
                   <p class="lead">
                     <li class="lead-edu">2024 - 2025 | ວິສະຫະກຳຄອມພິວເຕີ (ປະລິນຍາຕີ)</li>
                   </p> -->
