--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                   <p class="lead">
                   <ul class="school">
                     <li>ລົງຝືກງານທີ່ ວິທະຍາໄລ ເຕັກນິກ-ວິຊາຊີບຫຼວງພະບາງ 23/09/2024 - 26/12/2024</li>
-                    <li>ລົງຝຶກອົບຮົມການບຳລຸງຮັກສາ ແລະ ແກ້ໄຂບັນຫາຊອບແວຄອມພິວເຕີ ຄັ້ງວັນທີ 14 - 18 ກໍລະກົດ 2025 ທີ່
+                    <li>ລົງຝຶກອົບຮົມການບຳລຸງຮັກສາ ແລະ ແກ້ໄຂບັນຫາຊອບແວຄອມພິວເຕີໃຫ້ພະນັກງານຄູ ຄັ້ງວັນທີ 14 - 18 ກໍລະກົດ 2025 ທີ່
                       ເມືອງເງິນ ແຂວງໄຊຍະບູລີ
                       ສະໜັບສະໜູນໂດຍ ອົງການມູນນິທີເກື້ອຝັນເດັກ
                       14/07/2025 - 18/07/2025</li>
