--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="img/JLOE7957.PNG" class="img-fluid rounded b-shadow-a" alt="">
+                      <img src="img/ToraProfile.jpg" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7">
@@ -228,6 +228,30 @@
       <div class="row">
         <div class="col-md-4">
           <div class="work-box">
+            <a href="https://drive.google.com/file/d/1n03a42UMf5-242OLLS-_-xT-LXMOys9C/view?usp=drive_link">
+              <div class="work-img">
+                <img src="img/Point.png" alt="" class="img-fluid">
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">ໃບຄະແນນ</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">ໂຮງຮຽນປະຊາທີປະໄຕ</span> / <span class="w-date">12 Aug. 2024</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <span class="ion-ios-plus-outline"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="work-box">
             <a href="img/Z50_3428.jpeg" data-lightbox="gallery-mf">
               <div class="work-img">
                 <img src="img/Z50_3428.jpeg" alt="" class="img-fluid">
@@ -235,7 +259,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">ລົງຊ້ອມແປງຄອມພິວເຕີ</h2>
+                    <h2 class="w-title">ມອບໃບຍ້ອງຍໍ</h2>
                     <div class="w-more">
                       <span class="w-ctegory">ໂຮງຮຽນປະຊາທີປະໄຕ</span> / <span class="w-date">4 Jun. 2024</span>
                     </div>
@@ -252,14 +276,14 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/Z50_3343.jpeg" data-lightbox="gallery-mf">
+            <a href="img/Pasatipatay.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/Z50_3343.jpeg" alt="" class="img-fluid">
+                <img src="img/Pasatipatay.jpg" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">ລົງຊ້ອມແປງຄອມພິວເຕີ</h2>
+                    <h2 class="w-title">ຊ້ອມແປງຄອມພິວເຕີ</h2>
                     <div class="w-more">
                       <span class="w-ctegory">ໂຮງຮຽນປະຊາທີປະໄຕ</span> / <span class="w-date">4 Jun. 2024</span>
                     </div>
@@ -276,16 +300,16 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/LPB02588.jpeg" data-lightbox="gallery-mf">
+            <a href="img/Xayya.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/LPB02588.jpeg" alt="" class="img-fluid">
+                <img src="img/Xayya.jpg" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">ຖ່າຍຮູບງານເກົາຫຼີ</h2>
+                    <h2 class="w-title">ລົງຝຶກອົບຮົມໃຫ້ພະນັກງານຄູ</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">ເຕັກນິກວິຊາຊີບ</span> / <span class="w-date">15 Dec. 2023</span>
+                      <span class="w-ctegory">ໂຮງຮຽນ ມ.ສ ນໍ້າເງິນ ທີ່ ເມືອງເງິນ ແຂວງໄຊຍະບູລີ</span> / <span class="w-date">15 Jul. 2025</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -391,7 +415,7 @@
                       Me...!
                     </h5>
                   </div>
-                  <img src="img/4.jpeg" class="img-fluid rounded b-shadow-a">
+                  <img src="img/ToraProfile.jpg" class="img-fluid rounded b-shadow-a">
                 </div>
                 <div class="col-md-6">
                   <div class="title-box-2 pt-4 pt-md-0">
