--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">ໃບຄະແນນ</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">ໂຮງຮຽນປະຊາທີປະໄຕ</span> / <span class="w-date">12 Aug. 2024</span>
+                      <span class="w-ctegory">ວິທະຍາໄລ ເຕັກນິກ-ວິຊາຊີບຫຼວງພະບາງ</span> / <span class="w-date">12 Aug. 2024</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
