--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                     <div class="about-info">
                       <p><span class="title-s">Name: </span> <span>Vonethasin Vilayphone</span></p>
                       <p><span class="title-s">Profile: </span> <span>Student</span></p>
+                      <p><span class="title-s">Date of Birth: </span> <span>06/05/2004</span></p>
                       <p><span class="title-s">Email: </span> <span>vonethasin@gmail.com</span></p>
                       <p><span class="title-s">Phone: </span> <span>+8562099778688</span></p>
                     </div>
