--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">ໃບຄະແນນ</h2>
+                    <h2 class="w-title">ໃບຄະແນນ (ໝາຍເຫດ : - ຮຽນຈົບແລ້ວ - ລໍຖ້າຮັບໃບປະກາດ ແລະ ລໍຖ້າອາຈານປ້ອນຄະແນນເຂົ້າໃຫ້ຄົບ</h2>
                     <div class="w-more">
                       <span class="w-ctegory">ວິທະຍາໄລ ເຕັກນິກ-ວິຊາຊີບຫຼວງພະບາງ</span> / <span class="w-date">12 Aug. 2024</span>
                     </div>
